Fix authentication views, urls, and templates

--- a/django-models/LibraryProject/relationship_app/templates/relationship_app/library_detail.html
+++ b/django-models/LibraryProject/relationship_app/templates/relationship_app/library_detail.html
@@ -51,3 +51,8 @@
 </ul>
 </body>
 </html>
+
+
+{% for book in library.books.all %}
+    <li>{{ book.title }} by {{ book.author.name }}</li>
+{% endfor %}
